syntax = "proto3";

package place;

service PlaceService {
    rpc FindOne (ID) returns (SingleData) {}
    rpc FindAll (Empty) returns (MultipleData) {}
    rpc Create (CreateDto) returns (SingleData) {}
    rpc Update (UpdateDto) returns (SingleData){}
    rpc Remove (ID) returns (SingleData){}
}

//paramater
message ID {
    int32 id = 1;
}

message Empty {}

//dto


message CreateDto{
    string name = 1;
    int32 layer = 2;
    int32 price = 3;
} 

message UpdateDto{
   int32 id = 1;
   CreateDto dto = 2;
} 


//return data



message MultipleData {
    string message = 1;
    int32 statusCode = 2;
    repeated PlaceWithRelation data = 3;
    Error error = 4;
}

message SingleData {
    string message = 1;
    int32 statusCode = 2;
    Place data = 3;
    Error error = 4;
}


//entity
message Place {
    int32 id = 1;
    string name = 2;
    int32 layer = 3;
    int32 price = 4;
    string createdAt = 5;
    string lastEditedAt = 6;
}

message PlaceWithRelation {
    int32 id = 1;
    string name = 2;
    Layer layer = 3;
    int32 price = 4;
    string createdAt = 5;
    string lastEditedAt = 6;
}

message Layer {
    int32 id = 1;
    string name = 2;
    int32 floor = 3;
    int32 park = 4;
    string createdAt = 5;
    string lastEditedAt = 6;
}


//Error
message Error {
    string errorMessage = 1;
    int32 errorCode = 2;
}